gts-macros/tests/compile_fail/version_missing_in_struct.stderr
error: struct_to_gts_schema: type_id 'gts.x.core.events.type.v1~' has a version but struct 'BaseEvent' does not have a version suffix. Add 'V1' suffix to the struct name (e.g., 'BaseEventV1')
  --> tests/compile_fail/version_missing_in_struct.rs:13:12
   |
13 | pub struct BaseEvent {
   |            ^^^^^^^^^
